<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"

        android:src="@drawable/final_backgroung"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="387dp"
        android:layout_height="40dp"
        android:text="RIVSKY INC."
        android:textSize="18sp"
        android:paddingBottom="15dp"
        android:textColor="@color/color_of_buttoms"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:layout_editor_absoluteX="-111dp"
        tools:layout_editor_absoluteY="-59dp">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/button_start"
                    android:layout_width="371dp"
                    android:layout_height="222dp"
                    android:layout_gravity="center"

                    android:backgroundTint="@color/invincible"
                    android:src="@drawable/button_start_v2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.547"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.517" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageButton
                        android:id="@+id/button_thriller"
                        android:layout_width="393dp"
                        android:layout_height="205dp"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/invincible"
                        android:src="@drawable/button_knife"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.547"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.517"

                        />
                    <TextView
                        android:layout_width="361dp"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:text="@string/thriller"
                        android:textStyle="bold"
                        android:textColor="@color/red_another_palette"
                        android:textSize="50sp" />

                </LinearLayout>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageButton
                    android:id="@+id/button_catalog"
                    android:layout_width="361dp"
                    android:layout_height="207dp"
                    android:layout_gravity="center_vertical"

                    android:backgroundTint="@color/invincible"
                    android:src="@drawable/button_horror_v1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.547"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.517" />

                <TextView
                    android:layout_width="361dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:text="@string/horror"
                    android:textStyle="bold"
                    android:textColor="@color/red_another_palette"
                    android:textSize="50sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >

                <ImageButton
                    android:id="@+id/button_action"
                    android:layout_width="361dp"
                    android:layout_height="207dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/invincible"
                    android:src="@drawable/button_action_white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.547"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.517" />
                <TextView
                    android:layout_width="361dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:text="@string/action"
                    android:textStyle="bold"
                    android:textColor="@color/red_another_palette"
                    android:textSize="50sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageButton
                    android:id="@+id/button_comedy"
                    android:layout_width="393dp"
                    android:layout_height="207dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/invincible"
                    android:src="@drawable/button_comedy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.547"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.517" />
                <TextView
                    android:layout_width="361dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:text="@string/comedy"
                    android:textStyle="bold"
                    android:textColor="@color/red_another_palette"
                    android:textSize="50sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageButton
                    android:id="@+id/button_drama"
                    android:layout_width="393dp"
                    android:layout_height="207dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/invincible"
                    android:src="@drawable/button_drama"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.547"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.517" />
                <TextView
                    android:layout_width="361dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:text="@string/drama"
                    android:textStyle="bold"
                    android:textColor="@color/red_another_palette"
                    android:textSize="50sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageButton
                    android:id="@+id/button_fantasy"
                    android:layout_width="393dp"
                    android:layout_height="207dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/invincible"
                    android:src="@drawable/fantasy_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.547"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.517" />
                <TextView
                    android:layout_width="361dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:text="@string/fantasy"
                    android:textStyle="bold"
                    android:textColor="@color/red_another_palette"
                    android:textSize="50sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                >
                <ImageButton
                    android:id="@+id/button_animation"
                    android:layout_width="393dp"
                    android:layout_height="207dp"
                    android:layout_gravity="center"

                    android:backgroundTint="@color/invincible"
                    android:src="@drawable/button_cartoons"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.547"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.517" />
                <TextView
                    android:layout_width="361dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:text="@string/cartoons"
                    android:textStyle="bold"
                    android:textColor="@color/red_another_palette"
                    android:textSize="50sp" />

            </LinearLayout>

                <!--<TextView-->
                <!--    android:id="@+id/textViewGenre"-->
                <!--    android:layout_width="393dp"-->
                <!--    android:layout_height="222dp"-->
                <!--    android:text="TEXT"-->
                <!--    android:gravity="center"-->
                <!--    android:layout_gravity="center"-->
                <!--    android:textColor="@color/red"-->
                <!--    android:textSize="50sp"-->
                <!--    />-->


            </LinearLayout>

        </HorizontalScrollView>


    </LinearLayout>


    <!--</HorizontalScrollView>-->
</androidx.constraintlayout.widget.ConstraintLayout>